openshift/catalogd/manifests/02-networkpolicy-openshift-catalogd-catalogd-default-deny-all-traffic.yml
---
# Source: olmv1/templates/networkpolicy/networkpolicy-olmv1-system-default-deny-all-traffic.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    olm.operatorframework.io/feature-set: standard
  labels:
    app.kubernetes.io/name: catalogd
    app.kubernetes.io/part-of: olm
  name: catalogd-default-deny-all-traffic
  namespace: openshift-catalogd
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
